<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="#1A1C29"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

       <EditText
           android:id="@+id/email_register"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="12dp"
           android:layout_marginTop="8dp"
           android:background="@drawable/rounded_button_field"
           android:drawableStart="@color/text_black"
           android:hint="@string/email_hint"
           android:padding="16dp"
           android:textColor="#000000"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/register_tittle" />

       <EditText
           android:id="@+id/repeat_email_register"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="12dp"
           android:layout_marginTop="8dp"
           android:background="@drawable/rounded_button_field"
           android:drawableStart="@color/text_black"
           android:hint="@string/repeat_email_hint"
           android:padding="16dp"
           android:textColor="#000000"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/email_register" />

       <EditText
           android:id="@+id/password_register"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="12dp"
           android:layout_marginTop="8dp"
           android:background="@drawable/rounded_button_field"
           android:drawableStart="@color/text_black"
           android:hint="@string/password_hint"
           android:padding="16dp"
           android:textColor="#000000"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/repeat_email_register" />

       <EditText
           android:id="@+id/repeat_password_register"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="12dp"
           android:layout_marginTop="8dp"
           android:background="@drawable/rounded_button_field"
           android:drawableStart="@color/text_black"
           android:hint="@string/repeat_password_hint"
           android:padding="16dp"
           android:textColor="#000000"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/password_register" />

       <CheckBox
           android:id="@+id/checkbox"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/checkbox_text"
           android:textColor="#000000"
           android:textSize="14sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/repeat_password_register" />

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/register_btn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="12dp"
           android:layout_marginTop="10dp"
           android:elevation="0dp"
           android:background="@drawable/rounded_button"
           android:padding="16dp"
           android:text="@string/register_button_text"
           android:textColor="#FFFFFF"
           android:textSize="18sp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/checkbox" />

       <TextView
           android:id="@+id/already_account"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/already_account_text"
           android:textAlignment="center"
           android:textColor="#2F4858"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/register_btn" />
   </androidx.constraintlayout.widget.ConstraintLayout>